name: ext2-info
version: 1.0
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Data
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
    Data.EXT2.Info
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10 && < 1
    , binary >= 0.5 && < 1
    , unix-time >= 0.1 && < 0.2
  hs-source-dirs: src
  default-language: Haskell2010

executable ext2-info
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10 && < 1
    , binary >= 0.5 && < 1
    , unix-time >= 0.1 && < 0.2
  hs-source-dirs: src
  default-language: Haskell2010
