name:          ext2-info
version:       1.0
license:       MIT
license-file:  LICENSE
author:        Braden Walters <vc@braden-walters.info>,
               Ricky Elrod <ricky@elrod.me>
maintainer:    Braden Walters <vc@braden-walters.info>,
               Ricky Elrod <ricky@elrod.me>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:
    Data.EXT2.Info
    Data.EXT2.Info.Types
  build-depends:
      base >= 4 && < 5
    , binary >= 0.5 && < 1
    , bitwise >= 0.1 && < 0.2
    , bytestring >= 0.10 && < 1
    , lens >= 4.4 && < 5
    , unix-time >= 0.1 && < 0.2
    , template-haskell
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable ext2-info
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , binary >= 0.5 && < 1
    , bitwise >= 0.1 && < 0.2
    , bytestring >= 0.10 && < 1
    , lens >= 4.4 && < 5
    , unix-time >= 0.1 && < 0.2
    , template-haskell
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2